--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-file-image-to-base64": "^1.0.1",
+    "react-file-base64": "^1.0.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
